# prod-video-stack

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
analysis/detect/: _yolo_impl.py  detector.py
analysis/motion/: __init__.py  _legacy_engine.py  clip_manager.py  config.py  engine.py  events.py  model.py  sidecar.py
analysis/motion/utils/: motion_utils.py
capture/: __init__.py  nonblocking_adapter.py  reader.py  shm_reader.py  stats_adapter.py  video_source.py
common/: frame.py  time.py  timebase.py
docs/: README_Motion.md  README_Reader.md  README_Recorder.md  ROADMAP.md
infra/: README.md
native/: README.md
record/: recorder.py
sidecar/: reader.py  schema_v2.md  writer.py
tests/: conftest.py  test_check_sync_cli.py  test_motion_clip_manager.py  test_motion_events.py  test_motion_import.py  test_reader_core.py  test_recorder.py  test_sidecar_io.py  test_stats_adapter.py  test_timebase.py
tools/: check_sync.py  debug_segments_horizon.py  demo_reader.py  dump_reader_stats.py  run_motion_pipeline.py
tools/samples/: sync_report.md
